--- a/src/index.html
+++ b/src/index.html
@@ -13,10 +13,10 @@
     <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body class="test">
-<script type="module" src="https://cdnjs.cloudflare.com/ajax/libs/vConsole/3.4.0/vconsole.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/vConsole/3.4.0/vconsole.min.js"></script>
 <script>
-  // var vConsole = new VConsole();
-  // console.log('Hello world');
+  var vConsole = new VConsole();
+  console.log('Hello world');
 </script>
 <script type="module" src="main.ts"></script>
 </body>
